--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>To Do</title>
     <link href="https://fonts.googleapis.com/css?family=Lobster|Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
   </head>
